--- a/read_write_wav_in_frequency_domain.ipynb
+++ b/read_write_wav_in_frequency_domain.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "# load this data by running ./setup\n",
     "filename = 'African Drum Music-wXV39pybgJU-sm.wav'"
    ]
   },
