--- a/explore_sin_in_frequency_domain.ipynb
+++ b/explore_sin_in_frequency_domain.ipynb
@@ -635,6 +635,18 @@
     "# generated above\n",
     "(np.fft.fftfreq(dsin.shape[0])*44100)[46]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: now show same plots, but with a different frequency band closer to 1979\n",
+    "# TODO: any way to make these plots change as a slider changes the frequency"
+   ]
   }
  ],
  "metadata": {
